@@ -15,6 +15,8 @@
 // this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 // Place, Suite 330, Boston, MA  02111-1307  USA
 
+// FIXME: Throw exception if empty filename passed?
+
 #include <unistd.h>
 
 #include "absolute.h"
@@ -25,22 +27,28 @@
 using namespace reroot;
 using namespace std;
 
+namespace
+{
+	// Convert original filename to an absolute filename & store it in list.
+	void absolute_list (StringList &abs, string const &orig)
+	{
+		// Add working directory if filename is relative.
+		if (orig [0] != '/')
+			abs.append_string (CStringPtr (getcwd (0, 0)));
+
+		// Append original filename.
+		if (!orig.empty ())
+			abs.append_filename (orig);
+	}
+}
+
 // Convert original filename to an absolute filename.  Don't resolve symbolic
 // links or check if the file exists.
 void reroot::absolute (string &abs, string const &orig)
 {
+	// Add absolute filename to list.
 	StringList list;
-
-	// Add working directory if filename is relative.
-	if (orig [0] != '/')
-	{
-		CStringPtr cwd = getcwd (0, 0);
-		list.append_string (cwd);
-	}
-
-	// Parse original filename.
-	if (!orig.empty ())
-		list.append_filename (orig);
+	absolute_list (list, orig);
 
 	// Get absolute filename from list.
 	list.get_filename (abs);
@@ -50,10 +58,53 @@ void reroot::absolute (string &abs, string const &orig)
 		abs = '/';
 }
 
-void reroot::relative (string &/*rel*/, string const &/*orig*/)
+// Convert original filename to a filename relative to the current working
+// directory.  Don't resolve symbolic links or check if the file exists.
+void reroot::relative (string &rel, string const &orig)
 {
+	relative (rel, orig, CStringPtr (getcwd (0, 0)));
 }
 
-void reroot::relative (string &/*rel*/, string const &/*orig*/, string const &/*dir*/)
+// Convert original filename to a filename relative to dir.  Don't resolve
+// symbolic links or check if the file exists.
+void reroot::relative (string &rel, string const &orig, string const &dir)
 {
+	// Get absolute filename in list.
+	StringList filename;
+	absolute_list (filename, orig);
+
+	{
+		typedef StringList::const_iterator Iterator;
+
+		// Get the reference directory's absolute name in a list, & an
+		// iterator pointing to the start.
+		StringList const directory;
+		absolute_list (const_cast <StringList &> (directory), dir);
+		Iterator i = directory.begin ();
+
+		// Remove elements of the filename that are shared with the
+		// reference directory.
+		for (; i != directory.end (); ++i)
+		{
+			Iterator const elem = filename.begin ();
+
+			if (elem == filename.end () || *i != *elem)
+				break;
+
+			filename.pop_front ();
+		}
+
+		// Prepend the filename with `..' for each different element of
+		// the reference directory name.
+		for (; i != directory.end (); ++i)
+			filename.push_front ("..");
+	}
+
+	// Get relative filename from list.
+	filename.get_string (rel);
+
+	// If filename is the directory name, the relative filename will be
+	// empty.
+	if (rel.empty ())
+		rel = '.';
 }
